--- a/css/base.css
+++ b/css/base.css
@@ -10,9 +10,10 @@
 }
 
 :root {
+    --font-text: 'Bad Script', cursive;
     --font-title: 'Lobster', cursive;
-    --color-bg: #BB2528;
-    --color-text: #F8B229;
+    --color-bg: #F8B229;
+    --color-text: #BB2528;
 }
 
 html{
@@ -26,14 +27,16 @@ body{
     min-height: 100%;
     color: var(--color-text);
     background-color: var(--color-bg);
-    background-image: url(https://ae01.alicdn.com/kf/HTB17N_QiRjTBKNjSZFNq6ysFXXaL/Christmas-Tree-Photography-Background-Studio-Photo-Prop-Backdrop-Thin-Vinyl-Photoshoot-Background-Children.jpg);
+    background-image: url(../images/bg.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+
+    font-family: var(--font-text);
 }
 
 h1, h2, h3, h4, h5{
-    font-weight: bold;
+    font-weight: normal;
     font-family: var(--font-title);
 }
 
@@ -60,8 +63,22 @@ h1, h2, h3, h4, h5{
 .card{
     text-align: center;
     font-size: 1rem;
+
+    padding: 20px;
+    background-color: rgba(242, 242, 242, 0.8);
+    border-radius: 20px;
+    border: 10px solid;
 }
 
 .card h1{
-    font-size: 6em;
+    font-size: 8em;
+    text-shadow: 0px 0px 11px #fff;
+    margin-bottom: 20px;
+}
+
+.card p{
+    font-size: 4em;
+    text-shadow: 0px 0px 11px #fff;
+    font-family: var(--font-text);
+    font-weight: bold;
 }
