--- a/css/base.css
+++ b/css/base.css
@@ -24,6 +24,7 @@ html{
 
 body{
     width: 100%;
+    height: auto;
     min-height: 100%;
     color: var(--color-text);
     background-color: var(--color-bg);
@@ -48,7 +49,7 @@ h1, h2, h3, h4, h5{
 
     display: flex;
     flex-direction: row;
-    height: 100vh;
+    min-height: 100vh;
     
 }
 
